<resources>
    <string name="app_name">AppLock</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="four_text">4</string>
    <string name="five_text">5</string>
    <string name="six_text">6</string>
    <string name="seven_text">7</string>
    <string name="eight_text">8</string>
    <string name="nine_text">9</string>
    <string name="zero_text">0</string>
    <string name="empty"/>
    <string name="set_your_6_digit_pin">Set your 6 digit pin</string>
    <string name="enter_pin">Enter pin</string>
    <string name="reenter_pin">Re-Enter Pin</string>
    <string name="pin_mismatch">Pin did not match.</string>
    <string name="all_apps">All Apps</string>
    <string name="notification_state_locked">L</string>
    <string name="notification_title">n</string>
</resources>
